--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,478 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# ANOVA  - Lab\n", "\n", "## Introduction\n", "\n", "In this lab, you'll get some brief practice generating an ANOVA table (AOV) and interpreting its output. You'll then also perform some investigations to compare the method to the t-tests you previously employed to conduct hypothesis testing.\n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "* Use ANOVA for testing multiple pairwise comparisons\n", "* Understand and explain the methodology behind ANOVA tests"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Loading the Data\n", "\n", "Start by loading in the data stored in the file **ToothGrowth.csv**."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Generating the ANOVA Table\n", "\n", "Now generate an ANOVA table in order to analyze the influence of the medication and dosage "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Reading the Table\n", "\n", "Make a brief comment regarding the statistics regarding the effect of supplement and dosage on tooth length."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your comment here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Comparing to T-Tests\n", "\n", "Now that you've gotten a brief chance to interact with ANOVA, its interesting to compare the results to those from the t-tests you were just working with. With that, start by breaking the data into two samples: those given the OJ supplement, and those given the VC supplement. Afterwards, you'll conduct a t-test to compare the tooth length of these two different samples."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Now compare a t-test between these two groups and print the associated two-sided p-value."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## A 2-Category ANOVA F-Test is Equivalent to a 2-Tailed t-Test!\n", "\n", "Now, recalculate an ANOVA F-test with only the supplement variable. An ANOVA F-test between two categories is the same as performing a 2-tailed t-Test! So, the p-value in the table should be identical to your calculation above.\n", "\n", "> Note: there may be a small fractional difference (>0.001) between the two values due to a rounding error between implementations. "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here; conduct an ANOVA F-test of the oj and vc supplement groups.\n", "#Compare the p-value to that of the t-test above. \n", "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Generating Multiple T-Tests\n", "\n", "While the 2-category ANOVA test is identical to a 2-tailed t-Test, performing multiple t-tests leads to the multiple comparisons problem. To investigate this, look at the various sample groups you could create from the 2 features: "]}, {"cell_type": "code", "execution_count": 7, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["('OJ', 0.5)\n", "('OJ', 1.0)\n", "('OJ', 2.0)\n", "('VC', 0.5)\n", "('VC', 1.0)\n", "('VC', 2.0)\n"]}], "source": ["for group in df.groupby(['supp', 'dose'])['len']:\n", "    group_name = group[0]\n", "    data = group[1]\n", "    print(group_name)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["While bad practice, examine the effects of calculating multiple t-tests with the various combinations of these. To do this, generate all combinations of the above groups. For each pairwise combination, calculate the p-value of a 2 sided t-test. Print the group combinations and their associated p-value for the two-sided t-test."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here; reuse your t-test code above to calculate the p-value for a 2-sided t-test\n", "#for all combinations of the supplement-dose groups listed above. \n", "#(Since there isn't a control group, compare each group to every other group.)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary\n", "\n", "In this lesson, you examined the ANOVA technique to generalize A/B testing methods to multiple groups and factors."]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.6.6"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ANOVA  - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll get some brief practice generating an ANOVA table (AOV) and interpreting its output. You'll then also perform some investigations to compare the method to the t-tests you previously employed to conduct hypothesis testing.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "* Use ANOVA for testing multiple pairwise comparisons\n",
+    "* Understand and explain the methodology behind ANOVA tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Data\n",
+    "\n",
+    "Start by loading in the data stored in the file **ToothGrowth.csv**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is OS\n",
+      " Volume Serial Number is D816-28B0\n",
+      "\n",
+      " Directory of C:\\Users\\luigi\\FlatironSchool\\Module03\\Section_21\\dsc-anova-lab-online-ds-pt-051319\n",
+      "\n",
+      "07/09/2019  14:47    <DIR>          .\n",
+      "07/09/2019  14:47    <DIR>          ..\n",
+      "07/09/2019  14:46                69 .gitignore\n",
+      "07/09/2019  14:47    <DIR>          .ipynb_checkpoints\n",
+      "07/09/2019  14:46               287 .learn\n",
+      "07/09/2019  14:46             1,849 CONTRIBUTING.md\n",
+      "07/09/2019  14:46             5,191 index.ipynb\n",
+      "07/09/2019  14:46             1,371 LICENSE.md\n",
+      "07/09/2019  14:46             3,506 README.md\n",
+      "07/09/2019  14:46               785 ToothGrowth.csv\n",
+      "               7 File(s)         13,058 bytes\n",
+      "               3 Dir(s)  20,335,333,376 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose\n",
+       "0   4.2   VC   0.5\n",
+       "1  11.5   VC   0.5\n",
+       "2   7.3   VC   0.5\n",
+       "3   5.8   VC   0.5\n",
+       "4   6.4   VC   0.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('ToothGrowth.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>18.813333</td>\n",
+       "      <td>1.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.649315</td>\n",
+       "      <td>0.628872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.200000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>13.075000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>19.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>25.275000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>33.900000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             len       dose\n",
+       "count  60.000000  60.000000\n",
+       "mean   18.813333   1.166667\n",
+       "std     7.649315   0.628872\n",
+       "min     4.200000   0.500000\n",
+       "25%    13.075000   0.500000\n",
+       "50%    19.250000   1.000000\n",
+       "75%    25.275000   2.000000\n",
+       "max    33.900000   2.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating the ANOVA Table\n",
+    "\n",
+    "Now generate an ANOVA table in order to analyze the influence of the medication and dosage "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df          F        PR(>F)\n",
+      "C(supp)    205.350000   1.0  14.016638  4.292793e-04\n",
+      "C(dose)   2426.434333   2.0  82.810935  1.871163e-17\n",
+      "Residual   820.425000  56.0        NaN           NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Your code here\n",
+    "formula = 'len ~ C(supp) + C(dose)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading the Table\n",
+    "\n",
+    "Make a brief comment regarding the statistics regarding the effect of supplement and dosage on tooth length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your comment here\n",
+    "# Both dose and supplement type are impactful. At first glance, dosage seems to be the more impactful of the two."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing to T-Tests\n",
+    "\n",
+    "Now that you've gotten a brief chance to interact with ANOVA, its interesting to compare the results to those from the t-tests you were just working with. With that, start by breaking the data into two samples: those given the OJ supplement, and those given the VC supplement. Afterwards, you'll conduct a t-test to compare the tooth length of these two different samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code here\n",
+    "oj_lengths = df[df.supp=='OJ']['len']\n",
+    "vc_lengths = df[df.supp=='VC']['len']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now compare a t-test between these two groups and print the associated two-sided p-value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06063450788093387"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups.\n",
+    "from scipy import stats\n",
+    "\n",
+    "stats.ttest_ind(oj_lengths, vc_lengths, equal_var=False)[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A 2-Category ANOVA F-Test is Equivalent to a 2-Tailed t-Test!\n",
+    "\n",
+    "Now, recalculate an ANOVA F-test with only the supplement variable. An ANOVA F-test between two categories is the same as performing a 2-tailed t-Test! So, the p-value in the table should be identical to your calculation above.\n",
+    "\n",
+    "> Note: there may be a small fractional difference (>0.001) between the two values due to a rounding error between implementations. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df         F    PR(>F)\n",
+      "C(supp)    205.350000   1.0  3.668253  0.060393\n",
+      "Residual  3246.859333  58.0       NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Your code here; conduct an ANOVA F-test of the oj and vc supplement groups.\n",
+    "#Compare the p-value to that of the t-test above. \n",
+    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)\n",
+    "formula = 'len ~ C(supp)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating Multiple T-Tests\n",
+    "\n",
+    "While the 2-category ANOVA test is identical to a 2-tailed t-Test, performing multiple t-tests leads to the multiple comparisons problem. To investigate this, look at the various sample groups you could create from the 2 features: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('OJ', 0.5)\n",
+      "('OJ', 1.0)\n",
+      "('OJ', 2.0)\n",
+      "('VC', 0.5)\n",
+      "('VC', 1.0)\n",
+      "('VC', 2.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in df.groupby(['supp', 'dose'])['len']:\n",
+    "    group_name = group[0]\n",
+    "    data = group[1]\n",
+    "    print(group_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While bad practice, examine the effects of calculating multiple t-tests with the various combinations of these. To do this, generate all combinations of the above groups. For each pairwise combination, calculate the p-value of a 2 sided t-test. Print the group combinations and their associated p-value for the two-sided t-test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code here; reuse your t-test code above to calculate the p-value for a 2-sided t-test\n",
+    "#for all combinations of the supplement-dose groups listed above. \n",
+    "#(Since there isn't a control group, compare each group to every other group.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lesson, you examined the ANOVA technique to generalize A/B testing methods to multiple groups and factors."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
